syntax = "proto3";
package event_by_player;
// option java_multiple_files = true;

// import "google/protobuf/struct.proto";

// ***** EventByPlayerObject Objects ***** //
message EventByPlayerObject {
  string id = 1;
  string event_id = 2;
  string agent_id = 3;
  string agent_prefix = 4;
  string player_username = 5;
  double quantity = 6;
  string currency = 7;
  string created_at = 8;
  string updated_at = 9;
}

message Options {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
  bool loadRelationIds = 6;
}

// ***** EventByPlayerObject Objects ***** //


// ***** EventByPlayerObject Status Response ***** //
message StatusResponse {
  bool successful = 1;
  int32 code = 2;
  string message = 3;
}
// ***** EventByPlayerObject Status Response ***** //

// ***** RequestResponse Insert ***** //
message InsertRequest {
  InsertRequestObject request = 1;
}

message InsertRequestObject {
string event_id = 1;
string agent_id = 2;
string agent_prefix = 3;
string player_username = 4;
double quantity = 5;
string currency = 6;
string created_at = 7;
string updated_at = 8;
}

message InsertResponse {
  InsertResponseObject response = 1;
}

message InsertResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataInsertResponseObject data = 2;
  }
}

message DataInsertResponseObject {
  repeated DataRawInsertResponseObject raw = 1; 
}

message DataRawInsertResponseObject {
    string id = 1;
    string event_id = 2;
    string agent_id = 3;
    string agent_prefix = 4;
    string player_username = 5;
    double quantity = 6;
    string currency = 7;
    string created_at = 8;
    string updated_at = 9;
}

// ***** RequestResponse Insert ***** //

// ***** RequestResponse FindOne ***** //
message FindOneRequest {
  FindOneRequestObject request = 1;
}

message FindOneRequestObject{
  EventByPlayerObject where = 1;
  Options options = 2;
}

message FindOneResponse {
  FindOneResponseObject response = 1;
}

message FindOneResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     EventByPlayerObject data = 2;
  }
}

// ***** RequestResponse FindOne ***** //

// ***** RequestResponse FindAll ***** //
message FindAllRequest {
  FindAllRequestObject request = 1;
}

message FindAllRequestObject{
  EventByPlayerObject where = 1;
  Options options = 2;
}

message FindAllResponse {
  FindAllResponseObject response = 1;
}

message FindAllResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventByPlayerObject data = 2;
}

// ***** RequestResponse FindAll ***** //

// ***** RequestResponse FindAllWhere ***** //
message FindAllWhereRequest {
  string request = 1;
}

message FindAllWhereRequestObject{
  map<string,string> where = 1;
  FindOptions options = 2;
  repeated string args = 3;
}

message FindAllWhereResponse {
  FindAllWhereResponseObject response = 1;
}

message FindAllWhereResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventByPlayerObject data = 2;
}

message FindOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse FindAllWhere ***** //

// ***** RequestResponse Update ***** //
message UpdateRequest {
  EventByPlayerObject request = 1;
  EventByPlayerObject update = 2;
}

message UpdateResponse {
  UpdateResponseObject response = 1;
}

message UpdateResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataUpdateResponseObject data = 2;
  }
}

message DataUpdateResponseObject {
  int32 affected = 1;
  repeated DataRawUpdateResponseObject raw = 2;
}

message DataRawUpdateResponseObject {
    string id = 1;
    string event_id = 2;
    string agent_id = 3;
    string agent_prefix = 4;
    string player_username = 5;
    double quantity = 6;
    string currency = 7;
    string created_at = 8;
    string updated_at = 9;
}
// ***** RequestResponse Update ***** //

// ***** RequestResponse Delete ***** //
message DeleteRequest {
  EventByPlayerObject request = 1;
}

message DeleteObject {
  string id = 1;
}

message DeleteResponse {
  DeleteResponseObject response = 1;
}

message DeleteResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataDeleteResponseObject data = 2;
  }
}

message DataDeleteResponseObject {
  int32 affected = 1;
  repeated DataRawDeleteResponseObject raw = 2;
}

message DataRawDeleteResponseObject {
    string id = 1;
    string event_id = 2;
    string agent_id = 3;
    string agent_prefix = 4;
    string player_username = 5;
    double quantity = 6;
    string currency = 7;
    string created_at = 8;
    string updated_at = 9;
}
// ***** RequestResponse Delete ***** //


// ***** RequestResponse Count ***** //
message CountRequest {
  CountRequestObject request = 1;
}

message CountRequestObject {
  EventByPlayerObject where = 1;
}

message CountResponse {
  CountResponseObject response = 1;
}

message CountResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountResponseObject data = 2;
  }
}

message DataCountResponseObject {
  int32 count = 1;
}
// ***** RequestResponse Count ***** //

// ***** RequestResponse CountAllWhere ***** //
message CountAllWhereRequest {
  string request = 1;
}

message CountAllWhereRequestObject {
  EventByPlayerObject where = 1;
  Options options = 2;
  repeated string args = 3;
}

message CountAllWhereResponse {
  CountAllWhereResponseObject response = 1;
}

message CountAllWhereResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountAllWhereResponseObject data = 2;
  }
}

message DataCountAllWhereResponseObject {
  int32 count = 1;
}

message CountOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse CountAllWhere ***** //


// ***** Increment ***** //
message IncrementRequest {
  IncrementOptionsQueryRequest request = 1;
  IncrementOptionsKeyRequest key = 2;
}

message IncrementOptionsKeyRequest {
  string key = 1;
  double quantity = 2;
}

message IncrementOptionsQueryRequest {
  string id = 1;
  string event_id = 2;
  string agent_id = 3;
  string agent_prefix = 4;
  string player_username = 5;
  string currency = 6;
}

message CustomIncrementResponse {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataIncrementResponse data = 2;
  }
}

message IncrementResponse {
  CustomIncrementResponse response = 1;
}

message CustomDataIncrementResponse{
  string id = 1;
}

message DataIncrementResponse{
  repeated CustomDataIncrementResponse raw = 1; 
}
// ***** Increment ***** //


service EventByPlayerService {
  rpc Insert (InsertRequest) returns (InsertResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc FindAll (FindAllRequest) returns (FindAllResponse) {}
  rpc FindAllWhere (FindAllWhereRequest) returns (FindAllWhereResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc Count (CountRequest) returns (CountResponse) {}
  rpc CountAllWhere (CountAllWhereRequest) returns (CountAllWhereResponse) {}
  rpc Increment (IncrementRequest) returns (IncrementResponse) {}
}

