syntax = "proto3";
package event_redeem;
// option java_multiple_files = true;

// import "google/protobuf/struct.proto";

// ***** EventRedeem Objects ***** //
message EventRedeemObject {
string id = 1;
string player_username = 2;
string event_id = 3;
string event_name = 4;
string agent_id = 5;
string agent_prefix = 6;
string type = 7;
string redeem_code = 8;
double quantity = 9;
string currency = 10;
string created_at = 11;
string updated_at = 12;
string status = 13;
}

message Options {
repeated string relations = 1;
repeated string select = 2;
int32 skip = 3;
int32 take = 4;
map<string,string> order = 5;
bool loadRelationIds = 6;
}

// ***** EventRedeem Objects ***** //


// ***** EventRedeem Status Response ***** //
message StatusResponse {
bool successful = 1;
int32 code = 2;
string message = 3;
}
// ***** EventRedeem Status Response ***** //

// ***** RequestResponse Insert ***** //
message InsertRequest {
InsertRequestObject request = 1;
}

message InsertRequestObject {
    string player_username = 1;
    string event_id = 2;
    string event_name = 3;
    string agent_id = 4;
    string agent_prefix = 5;
    string type = 6;
    string redeem_code = 7;
    double quantity = 8;
    string currency = 9;
    string created_at = 10;
    string updated_at = 11;
    string status = 12;
}

message InsertResponse {
  InsertResponseObject response = 1;
}

message InsertResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataInsertResponseObject data = 2;
  }
}

message DataInsertResponseObject {
  repeated DataRawInsertResponseObject raw = 1; 
}

message DataRawInsertResponseObject {
    string id = 1;
    string player_username = 2;
    string event_id = 3;
    string event_name = 4;
    string agent_id = 5;
    string agent_prefix = 6;
    string type = 7;
    string redeem_code = 8;
    double quantity = 9;
    string currency = 10;
    string created_at = 11;
    string updated_at = 12;
    string status = 13;
}

// ***** RequestResponse Insert ***** //

// ***** RequestResponse FindOne ***** //
message FindOneRequest {
  FindOneRequestObject request = 1;
}

message FindOneRequestObject{
  EventRedeemObject where = 1;
  Options options = 2;
}

message FindOneResponse {
  FindOneResponseObject response = 1;
}

message FindOneResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     EventRedeemObject data = 2;
  }
}

// ***** RequestResponse FindOne ***** //

// ***** RequestResponse FindAll ***** //
message FindAllRequest {
  FindAllRequestObject request = 1;
}

message FindAllRequestObject{
  EventRedeemObject where = 1;
  Options options = 2;
}

message FindAllResponse {
  FindAllResponseObject response = 1;
}

message FindAllResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventRedeemObject data = 2;
}

// ***** RequestResponse FindAll ***** //

// ***** RequestResponse FindAllWhere ***** //
message FindAllWhereRequest {
  string request = 1;
}

message FindAllWhereRequestObject{
  map<string,string> where = 1;
  FindOptions options = 2;
  repeated string args = 3;
}

message FindAllWhereResponse {
  FindAllWhereResponseObject response = 1;
}

message FindAllWhereResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventRedeemObject data = 2;
}

message FindOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse FindAllWhere ***** //

// ***** RequestResponse Update ***** //
message UpdateRequest {
  EventRedeemObject request = 1;
  EventRedeemObject update = 2;
}

message UpdateResponse {
  UpdateResponseObject response = 1;
}

message UpdateResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataUpdateResponseObject data = 2;
  }
}

message DataUpdateResponseObject {
  int32 affected = 1;
  repeated DataRawUpdateResponseObject raw = 2;
}

message DataRawUpdateResponseObject {
    string id = 1;
    string player_username = 2;
    string event_id = 3;
    string event_name = 4;
    string agent_id = 5;
    string agent_prefix = 6;
    string type = 7;
    string redeem_code = 8;
    double quantity = 9;
    string currency = 10;
    string created_at = 11;
    string updated_at = 12;
    string status = 13;
}
// ***** RequestResponse Update ***** //

// ***** RequestResponse Delete ***** //
message DeleteRequest {
  EventRedeemObject request = 1;
}

message DeleteObject {
  string id = 1;
}

message DeleteResponse {
  DeleteResponseObject response = 1;
}

message DeleteResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataDeleteResponseObject data = 2;
  }
}

message DataDeleteResponseObject {
  int32 affected = 1;
  repeated DataRawDeleteResponseObject raw = 2;
}

message DataRawDeleteResponseObject {
    string id = 1;
    string player_username = 2;
    string event_id = 3;
    string event_name = 4;
    string agent_id = 5;
    string agent_prefix = 6;
    string type = 7;
    string redeem_code = 8;
    double quantity = 9;
    string currency = 10;
    string created_at = 11;
    string updated_at = 12;
    string status = 13;
}
// ***** RequestResponse Delete ***** //


// ***** RequestResponse Count ***** //
message CountRequest {
  CountRequestObject request = 1;
}

message CountRequestObject {
  EventRedeemObject where = 1;
}

message CountResponse {
  CountResponseObject response = 1;
}

message CountResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountResponseObject data = 2;
  }
}

message DataCountResponseObject {
  int32 count = 1;
}
// ***** RequestResponse Count ***** //

// ***** RequestResponse CountAllWhere ***** //
message CountAllWhereRequest {
  string request = 1;
}

message CountAllWhereRequestObject {
  EventRedeemObject where = 1;
  Options options = 2;
  repeated string args = 3;
}

message CountAllWhereResponse {
  CountAllWhereResponseObject response = 1;
}

message CountAllWhereResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountAllWhereResponseObject data = 2;
  }
}

message DataCountAllWhereResponseObject {
  int32 count = 1;
}

message CountOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse CountAllWhere ***** //

// ***** Increment ***** //
message IncrementRequest {
  IncrementOptionsQueryRequest request = 1;
  IncrementOptionsKeyRequest key = 2;
}

message IncrementOptionsKeyRequest {
  string key = 1;
  double quantity = 2;
}

message IncrementOptionsQueryRequest {
    string id = 1;
    string agent_id = 2;
    string agent_prefix = 3;
    string player_username = 4;
    string currency = 5;
    string type = 6;
}

message CustomIncrementResponse {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataIncrementResponse data = 2;
  }
}

message IncrementResponse {
  CustomIncrementResponse response = 1;
}

message CustomDataIncrementResponse{
  string id = 1;
  string agent_id = 2;
  string agent_prefix = 3;
  string player_username = 4;
  double balance = 5;
  string currency = 6;
  string type = 7;
}

message DataIncrementResponse{
  repeated CustomDataIncrementResponse raw = 1; 
}
// ***** Increment ***** //

// ***** RequestResponse Query ***** //
message QueryRequest {
  string request = 1;
}

message QueryResponse {
  string response = 1;
}
// ***** RequestResponse Query ***** //

service EventRedeemService {
  rpc Insert (InsertRequest) returns (InsertResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc FindAll (FindAllRequest) returns (FindAllResponse) {}
  rpc FindAllWhere (FindAllWhereRequest) returns (FindAllWhereResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc Count (CountRequest) returns (CountResponse) {}
  rpc CountAllWhere (CountAllWhereRequest) returns (CountAllWhereResponse) {}
  rpc Increment (IncrementRequest) returns (IncrementResponse) {}
  rpc Query (QueryRequest) returns (QueryResponse) {}
}

